--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -37,7 +37,7 @@ jobs:
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
   # ====================
-  # 3. Packaging & Scan image
+  # 3. Packaging & Scan the image
   # ====================
   package-and-scan:
     runs-on: self-hosted
