--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -62,16 +62,56 @@ jobs:
           echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
           docker compose -f docker-compose.yml push
   
-      - name: Trivy Remote Scan
-        run: |
-          for img in $(docker images --format "{{.Repository}}:{{.Tag}}" | grep 'example-voting-app'); do
-            echo "🔍 Scanning on DockerHub $img ..."
-            trivy image \
-              --exit-code 0 \
-              --ignore-unfixed \
-              --severity HIGH,CRITICAL \
-              ${{ secrets.DOCKERHUB_USERNAME }}/$img
-          done
+      # 🔍 Scan des images après push avec l’action officielle
+      - name: Scan worker
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-worker:latest
+          format: table
+          exit-code: 0
+          ignore-unfixed: true
+          vuln-type: os,library
+          severity: HIGH,CRITICAL
+  
+      - name: Scan result
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-result:latest
+          format: table
+          exit-code: 0
+          ignore-unfixed: true
+          vuln-type: os,library
+          severity: HIGH,CRITICAL
+  
+      - name: Scan vote
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-vote:latest
+          format: table
+          exit-code: 0
+          ignore-unfixed: true
+          vuln-type: os,library
+          severity: HIGH,CRITICAL
+  
+      - name: Scan db
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-db:latest
+          format: table
+          exit-code: 0
+          ignore-unfixed: true
+          vuln-type: os,library
+          severity: HIGH,CRITICAL
+  
+      - name: Scan redis
+        uses: aquasecurity/trivy-action@0.20.0
+        with:
+          image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-redis:latest
+          format: table
+          exit-code: 0
+          ignore-unfixed: true
+          vuln-type: os,library
+          severity: HIGH,CRITICAL
 
   # ====================
   # 4. Déploiement Préprod (VM2)
