--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -54,39 +54,44 @@ jobs:
     runs-on: self-hosted
     needs: [sonar-analysis, sca-scan]
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
-  
-      - name: Build Docker Images
-        run: docker compose -f docker-compose.yml build
-  
-      - name: DockerHub Login
+        
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      - name: Build & Push Docker image
         run: |
-          echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-  
-      - name: Tag Docker Images
-        run: |
-          for img in vote result worker redis db; do
-            docker tag $img ${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
-          done
-  
-      - name: Push Docker Images
-        run: |
-          for img in vote result worker redis db; do
-            docker push ${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
-          done
-  
-      - name: Trivy Remote Scan
-        run: |
-          for img in vote result worker redis db; do
-            echo "🔍 Scanning ${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest ..."
-            trivy image \
-              --exit-code 0 \
-              --ignore-unfixed \
-              --severity HIGH,CRITICAL \
-              ${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
-          done
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}//example-voting-app-$img:latest
+          IMAGE_TAG=${{ github.sha }}
+          docker build -t $IMAGE_NAME:$IMAGE_TAG .
+          docker push $IMAGE_NAME:$IMAGE_TAG
 
+      - name: Install Trivy CLI
+        uses: aquasecurity/setup-trivy@v0.2.3
+      - name: Trivy image scan
+        run: |
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}//example-voting-app-$img:latest
+          IMAGE_TAG=${{ github.sha }}
+          trivy image --severity HIGH,CRITICAL $IMAGE_NAME:$IMAGE_TAG
+      - name: Trivy image scan (JSON)
+        run: |
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
+          IMAGE_TAG=${{ github.sha }}
+          trivy image --severity HIGH,CRITICAL \
+            --format json --output trivy-image.json $IMAGE_NAME:$IMAGE_TAG
+      - name: Upload image scan report
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-image
+          path: trivy-image.json
+  
   # ====================
   # 4. Déploiement Préprod (VM2)
   # ====================
