--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -54,43 +54,79 @@ jobs:
     runs-on: self-hosted
     needs: [sonar-analysis, sca-scan]
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-        
+  
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
-        
+  
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
-      - name: Build & Push Docker image
+  
+      - name: Build, Tag & Push Images
         run: |
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}//example-voting-app-$img:latest
-          IMAGE_TAG=${{ github.sha }}
-          docker build -t $IMAGE_NAME:$IMAGE_TAG .
-          docker push $IMAGE_NAME:$IMAGE_TAG
-
+          for img in vote result worker redis db; do
+            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
+            echo "📦 Building $img..."
+            docker build -t $IMAGE_NAME ./services/$img
+            echo "🚀 Pushing $IMAGE_NAME..."
+            docker push $IMAGE_NAME
+          done
+  
       - name: Install Trivy CLI
         uses: aquasecurity/setup-trivy@v0.2.3
-      - name: Trivy image scan
+  
+      - name: Trivy Remote Scan
         run: |
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}//example-voting-app-$img:latest
-          IMAGE_TAG=${{ github.sha }}
-          trivy image --severity HIGH,CRITICAL $IMAGE_NAME:$IMAGE_TAG
-      - name: Trivy image scan (JSON)
+          for img in vote result worker redis db; do
+            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
+            echo "🔍 Scanning $IMAGE_NAME..."
+            trivy image --exit-code 0 --ignore-unfixed --severity HIGH,CRITICAL $IMAGE_NAME
+          done
+  
+      - name: Trivy Scan JSON Report
         run: |
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
-          IMAGE_TAG=${{ github.sha }}
-          trivy image --severity HIGH,CRITICAL \
-            --format json --output trivy-image.json $IMAGE_NAME:$IMAGE_TAG
-      - name: Upload image scan report
+          for img in vote result worker redis db; do
+            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
+            trivy image --exit-code 0 --ignore-unfixed --severity HIGH,CRITICAL \
+              --format json --output trivy-$img.json $IMAGE_NAME
+          done
+  
+      - name: Upload Trivy Scan Reports
         uses: actions/upload-artifact@v4
         with:
-          name: trivy-image
-          path: trivy-image.json
+          name: trivy-scans
+          path: |
+            trivy-vote.json
+            trivy-result.json
+            trivy-worker.json
+            trivy-redis.json
+            trivy-db.json
+  
+       - name: Install Trivy CLI
+         uses: aquasecurity/setup-trivy@v0.2.3
+          
+        - name: Trivy image scan
+          run: |
+            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}//example-voting-app-$img:latest
+            IMAGE_TAG=${{ github.sha }}
+            trivy image --severity HIGH,CRITICAL $IMAGE_NAME:$IMAGE_TAG
+            
+        - name: Trivy image scan (JSON)
+          run: |
+            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
+            IMAGE_TAG=${{ github.sha }}
+            trivy image --severity HIGH,CRITICAL \
+              --format json --output trivy-image.json $IMAGE_NAME:$IMAGE_TAG
+              
+        - name: Upload image scan report
+          uses: actions/upload-artifact@v4
+          with:
+            name: trivy-image
+            path: trivy-image.json
   
   # ====================
   # 4. Déploiement Préprod (VM2)
