--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -56,6 +56,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # pour récupérer tout l’historique Git
   
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -66,33 +68,36 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
   
-      - name: Build, Tag & Push Images
-        run: |
-          for img in vote result worker redis db; do
-            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
-            echo "📦 Building $img..."
-            docker build -t $IMAGE_NAME ./services/$img
-            echo "🚀 Pushing $IMAGE_NAME..."
-            docker push $IMAGE_NAME
-          done
-  
       - name: Install Trivy CLI
         uses: aquasecurity/setup-trivy@v0.2.3
   
-      - name: Trivy Remote Scan
+      - name: Build, Tag & Push Images
         run: |
+          GIT_SHA=${GITHUB_SHA::8}
           for img in vote result worker redis db; do
-            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
-            echo "🔍 Scanning $IMAGE_NAME..."
-            trivy image --exit-code 0 --ignore-unfixed --severity HIGH,CRITICAL $IMAGE_NAME
+            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img
+            echo "📦 Building $img..."
+            docker build -t $IMAGE_NAME:$GIT_SHA ./services/$img
+            docker tag $IMAGE_NAME:$GIT_SHA $IMAGE_NAME:latest
+            echo "🚀 Pushing $IMAGE_NAME:$GIT_SHA and latest..."
+            docker push $IMAGE_NAME:$GIT_SHA
+            docker push $IMAGE_NAME:latest
           done
   
-      - name: Trivy Scan JSON Report
+      - name: Verify Images Exist
         run: |
           for img in vote result worker redis db; do
-            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img:latest
+            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img
+            docker pull $IMAGE_NAME:$GIT_SHA || exit 1
+          done
+  
+      - name: Trivy Remote Scan (JSON)
+        run: |
+          for img in vote result worker redis db; do
+            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img
+            echo "🔍 Scanning $IMAGE_NAME:$GIT_SHA ..."
             trivy image --exit-code 0 --ignore-unfixed --severity HIGH,CRITICAL \
-              --format json --output trivy-$img.json $IMAGE_NAME
+              --format json --output trivy-$img.json $IMAGE_NAME:$GIT_SHA
           done
   
       - name: Upload Trivy Scan Reports
@@ -105,7 +110,6 @@ jobs:
             trivy-worker.json
             trivy-redis.json
             trivy-db.json
-
   
   # ====================
   # 4. Déploiement Préprod (VM2)
