--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -54,62 +54,18 @@ jobs:
     runs-on: self-hosted
     needs: [sonar-analysis, sca-scan]
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # pour récupérer tout l’historique Git
-  
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-  
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-  
-      - name: Install Trivy CLI
-        uses: aquasecurity/setup-trivy@v0.2.3
-  
-      - name: Build, Tag & Push Images
+      - name: Build Docker image
         run: |
-          GIT_SHA=${GITHUB_SHA::8}
-          for img in vote result worker redis db; do
-            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img
-            echo "📦 Building $img..."
-            docker build -t $IMAGE_NAME:$GIT_SHA ./services/$img
-            docker tag $IMAGE_NAME:$GIT_SHA $IMAGE_NAME:latest
-            echo "🚀 Pushing $IMAGE_NAME:$GIT_SHA and latest..."
-            docker push $IMAGE_NAME:$GIT_SHA
-            docker push $IMAGE_NAME:latest
-          done
-  
-      - name: Verify Images Exist
-        run: |
-          for img in vote result worker redis db; do
-            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img
-            docker pull $IMAGE_NAME:$GIT_SHA || exit 1
-          done
-  
-      - name: Trivy Remote Scan (JSON)
-        run: |
-          for img in vote result worker redis db; do
-            IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/example-voting-app-$img
-            echo "🔍 Scanning $IMAGE_NAME:$GIT_SHA ..."
-            trivy image --exit-code 0 --ignore-unfixed --severity HIGH,CRITICAL \
-              --format json --output trivy-$img.json $IMAGE_NAME:$GIT_SHA
-          done
-  
-      - name: Upload Trivy Scan Reports
-        uses: actions/upload-artifact@v4
+          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}" --password-stdin
+          IMAGE="${{ secrets.DOCKERHUB_ORG }}/app:${{ github.sha }}"
+          docker build -t "$IMAGE" .
+          docker push "$IMAGE"
+
+      - name: Scan Dockerfile & Image - Trivy
+        uses: aquasecurity/trivy-action@master
         with:
-          name: trivy-scans
-          path: |
-            trivy-vote.json
-            trivy-result.json
-            trivy-worker.json
-            trivy-redis.json
-            trivy-db.json
+          image-ref: "${{ secrets.DOCKERHUB_ORG }}/app:${{ github.sha }}"
+          severity: HIGH,CRITICAL
   
   # ====================
   # 4. Déploiement Préprod (VM2)
