--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -83,7 +83,7 @@ jobs:
         run: ssh rocky@192.168.1.66 "docker stack deploy -c /home/user/docker-compose-preprod.yml votingapp-preprod"
 
       - name: OWASP ZAP Scan
-        run: docker run --rm -t owasp/zap2docker-stable zap-baseline.py -t http://vm2:8081
+        run: docker run --rm -t owasp/zap2docker-stable zap-baseline.py -t http://192.168.1.66:8081
 
   # ====================
   # 5. Validation manuelle
