--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -95,9 +95,10 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: OWASP ZAP Scan
-        run: docker run --rm -t zaproxy/zap-stable zap-baseline.py -t http://192.168.1.66:8081 -J report.json -I
-
+      - name: Run OWASP ZAP Baseline Scan
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/zap/wrk -t zaproxy/zap-stable \
+            zap-baseline.py -t http://192.168.1.66:8081 -J report.json -I
 
   # ====================
   # 5. Validation manuelle
