--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -43,9 +43,12 @@ jobs:
     runs-on: self-hosted
     needs: build-test
     steps:
-      - name: Clean Trivy cache
-        run: |
-          sudo rm -rf ~/.cache/trivy
+      - name: Cache Trivy DB
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/trivy
+          key: trivy-db
+
       - name: Trivy FS Scan
         run: |
           docker run --rm -v $(pwd):/src aquasec/trivy fs /src
