--- a/.github/workflows/pipeline1.yml
+++ b/.github/workflows/pipeline1.yml
@@ -136,7 +136,8 @@ jobs:
         run: |
           ssh rocky@192.168.1.67 "
             cd /opt
-            docker pull memecpux/app:1f85ff4149e0aadd4f01e8715a374be3120d8808
+            git clone http://github.com/naomieassi-arolitec/example-voting-app.git
+            git pull origin main
             docker stack deploy -c /home/rocky/docker-compose.yml votingapp"
 
   # ====================
